--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery-slimscroll": "^1.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
