--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +49,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
